# danws_python

./: .gitignore  README.md  pyproject.toml
src/dan_websocket/: __init__.py  client.py  server.py
src/dan_websocket/api/: __init__.py  client.py  flat_state_manager.py  flatten.py  principal_store.py  server.py  session.py  topic_client_handle.py  topic_handle.py
src/dan_websocket/connection/: __init__.py  bulk_queue.py  heartbeat_manager.py  reconnect_engine.py
src/dan_websocket/protocol/: __init__.py  codec.py  serializer.py  stream_parser.py  types.py
src/dan_websocket/state/: __init__.py  key_registry.py
tests/: test_codec.py  test_flatten.py  test_integration.py  test_key_registry.py  test_serializer.py  test_stream_parser.py
